Bugfix: align icons for actions correctly if in a actiongroup

--- a/frontends/default/stylesheets/stylesheet.css
+++ b/frontends/default/stylesheets/stylesheet.css
@@ -108,7 +108,6 @@ float: right;
 .active-scaffold-header div.actions div.action_group li span {
 float: none;
 margin: 0 2px;
-padding: 2px;
 }
 
 .active-scaffold-header div.actions .action_group ul {
